--- a/brendacarpinteria/Ver facturas.xaml
+++ b/brendacarpinteria/Ver facturas.xaml
@@ -10,7 +10,7 @@
     <Grid>
         <Button Content="Buscar" HorizontalAlignment="Left" Margin="10,37,0,0" VerticalAlignment="Top" Width="75"/>
         <Button Content="Salir" HorizontalAlignment="Left" Margin="639,16,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click"/>
-        <TextBox HorizontalAlignment="Left" Height="23" Margin="100,33,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
+        <TextBox x:Name="txtbuscador" HorizontalAlignment="Left" Height="23" Margin="100,33,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120" TextChanged="TextBox_TextChanged"/>
         <ComboBox x:Name="cobbus" HorizontalAlignment="Left" Margin="245,31,0,0" VerticalAlignment="Top" Width="150" Height="24" Background="#FFFF5200" >
             <ComboBoxItem Content="Id de Factura" IsSelected="True"/>
             <ComboBoxItem Content="Nombre del Empleado"/>
